<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/textViewAge"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="31dp"
        android:text="@string/textViewAge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignRight="@+id/textView"
        android:layout_below="@+id/textView"
        android:layout_marginTop="25dp"
        android:text="@string/textViewWeight" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="32dp"
        android:text="@string/textViewHeight" />

    <EditText
        android:id="@+id/editTextAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@+id/textView"
        android:layout_toRightOf="@+id/textView"
        android:ems="10"
        android:hint="@string/years"
        android:inputType="number" />

    <EditText
        android:id="@+id/editTextWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextAge"
        android:layout_alignStart="@+id/editTextAge"
        android:layout_below="@+id/editTextAge"
        android:ems="10"
        android:hint="@string/pounds"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:text="@string/buttonCalculate" />

    <EditText
        android:id="@+id/editTextFeet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editTextInches"
        android:layout_alignBottom="@+id/editTextInches"
        android:layout_alignLeft="@+id/editTextWeight"
        android:layout_alignStart="@+id/editTextWeight"
        android:ems="5"
        android:hint="@string/feet"
        android:inputType="number" />

    <EditText
        android:id="@+id/editTextInches"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextWeight"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp"
        android:layout_toEndOf="@+id/editTextFeet"
        android:layout_toRightOf="@+id/editTextFeet"
        android:ems="5"
        android:hint="@string/inches"
        android:inputType="number" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonCalculate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/textViewBMI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewResult"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp" />

    <TextView
        android:id="@+id/textViewBMIRange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewBMI"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:gravity="center" />

    <TextView
        android:id="@+id/textViewAdvice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewBMIRange"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp" />

</RelativeLayout>